@@ -410,6 +410,39 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|this
+operator|.
+name|initIOContext
+argument_list|(
+name|split
+argument_list|,
+name|job
+argument_list|,
+name|inputFormatClass
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|initIOContext
+parameter_list|(
+name|FileSplit
+name|split
+parameter_list|,
+name|JobConf
+name|job
+parameter_list|,
+name|Class
+name|inputFormatClass
+parameter_list|,
+name|RecordReader
+name|recordReader
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|boolean
 name|blockPointer
 init|=
@@ -510,6 +543,31 @@ block|}
 elseif|else
 if|if
 condition|(
+name|recordReader
+operator|instanceof
+name|RCFileRecordReader
+condition|)
+block|{
+name|blockPointer
+operator|=
+literal|true
+expr_stmt|;
+name|blockStart
+operator|=
+operator|(
+operator|(
+name|RCFileRecordReader
+operator|)
+name|recordReader
+operator|)
+operator|.
+name|getStart
+argument_list|()
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
 name|inputFormatClass
 operator|.
 name|getName
@@ -521,6 +579,10 @@ literal|"RCFile"
 argument_list|)
 condition|)
 block|{
+name|blockPointer
+operator|=
+literal|true
+expr_stmt|;
 name|RCFile
 operator|.
 name|Reader
@@ -538,10 +600,6 @@ argument_list|,
 name|job
 argument_list|)
 decl_stmt|;
-name|blockPointer
-operator|=
-literal|true
-expr_stmt|;
 name|in
 operator|.
 name|sync
