@@ -195,43 +195,7 @@ name|ql
 operator|.
 name|exec
 operator|.
-name|ColumnInfo
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|ql
-operator|.
-name|exec
-operator|.
 name|Operator
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|ql
-operator|.
-name|exec
-operator|.
-name|RowSchema
 import|;
 end_import
 
@@ -1289,6 +1253,20 @@ name|cloneJobConf
 argument_list|)
 expr_stmt|;
 block|}
+name|RecordReader
+name|innerReader
+init|=
+name|inputFormat
+operator|.
+name|getRecordReader
+argument_list|(
+name|inputSplit
+argument_list|,
+name|cloneJobConf
+argument_list|,
+name|reporter
+argument_list|)
+decl_stmt|;
 name|HiveRecordReader
 argument_list|<
 name|K
@@ -1300,16 +1278,7 @@ init|=
 operator|new
 name|HiveRecordReader
 argument_list|(
-name|inputFormat
-operator|.
-name|getRecordReader
-argument_list|(
-name|inputSplit
-argument_list|,
-name|cloneJobConf
-argument_list|,
-name|reporter
-argument_list|)
+name|innerReader
 argument_list|)
 decl_stmt|;
 name|rr
@@ -1321,6 +1290,8 @@ argument_list|,
 name|job
 argument_list|,
 name|inputFormatClass
+argument_list|,
+name|innerReader
 argument_list|)
 expr_stmt|;
 return|return
