@@ -268,6 +268,9 @@ Trunk -  Unreleased
     HIVE-1787 optimize the code path when there are no outer joins
     (Siying Dong via namit)
 
+    HIVE-1801 HiveInputFormat or CombineHiveInputFormat always sync blocks of RCFile twice
+    (Siying Dong via He Yongqiang)
+
   OPTIMIZATIONS
 
   BUG FIXES
